--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-jade": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-util": "^3.0.7",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
