--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/james-mcelwain/comprehension_reduce_playground#readme",
   "dependencies": {
+    "angular": "^1.4.7",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
