--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
   },
   "homepage": "https://github.com/james-mcelwain/comprehension_reduce_playground#readme",
   "dependencies": {
-    "angular": "^1.4.7",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^2.1.0",
     "gulp-util": "^3.0.7",
+    "jquery": "^2.1.4",
     "nouislider": "github:leongersen/noUiSlider",
-    "nouislider-browser": "^5.0.0-1",
-    "vinyl-source-stream": "^1.1.0"
+    "nouislider-browser": "^5.0.0-1"
   }
 }
