--- a/package.json
+++ b/package.json
@@ -24,5 +24,16 @@
     "jquery": "^2.1.4",
     "nouislider": "github:leongersen/noUiSlider",
     "nouislider-browser": "^5.0.0-1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.1.21",
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
